<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/ShowMilliseconds"
        android:title="@string/show_milliseconds"
        android:checkable="true"
        android:enabled="true"
        android:visible="true"
        />
    <item
        android:id="@+id/increaseSize"
        android:enabled="true"
        android:title="@string/increase_size"
        android:visible="true" />
    <item
        android:id="@+id/decreaseSize"
        android:enabled="true"
        android:title="@string/decrease_size"
        android:visible="true" />
    <item
        android:id="@+id/openAdvancedConfigurations"
        android:enabled="true"
        android:title="@string/advanced_configuration"
        android:visible="true" />


</menu>